--- a/papers/lime_diagnostics/references.bib
+++ b/papers/lime_diagnostics/references.bib
@@ -405,15 +405,13 @@ Guns Using 3D Images of Bullets },
 }
 
 @inproceedings{ribeiro:2016,
-  author    = {Marco Tulio Ribeiro and
-               Sameer Singh and
-               Carlos Guestrin},
-  title     = {"Why Should {I} Trust You?": Explaining the Predictions of Any Classifier},
+  author = {Marco Tulio Ribeiro and Sameer Singh and Carlos Guestrin},
+  title = {"Why Should {I} Trust You?": Explaining the Predictions of Any Classifier},
   booktitle = {Proceedings of the 22nd {ACM} {SIGKDD} International Conference on
                Knowledge Discovery and Data Mining, San Francisco, CA, USA, August
                13-17, 2016},
-  pages     = {1135--1144},
-  year      = {2016},
+  pages = {1135--1144},
+  year = {2016},
 }
 
 @article {riva:2014,
